[package]
name = "boost-rs"
version = "0.0.1"
authors = ["JasonkayZK <jasonkayzk@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/JasonkayZK/boost-rs"
homepage = "https://github.com/JasonkayZK/boost-rs"
description = """
A library for boosting your develop productivity on Rust.
"""
keywords = ["utilities", "toolkit", "random", "macros"]
categories = ["algorithms", "tools"]
include = ["src/", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
