[package]
name = "boost-rs"
version = "0.0.2"
authors = ["JasonkayZK <jasonkayzk@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/JasonkayZK/boost-rs"
homepage = "https://github.com/JasonkayZK/boost-rs"
description = """
A library for boosting your develop productivity on Rust.
"""
keywords = ["utilities", "toolkit", "random", "macros"]
categories = ["algorithms", "accessibility", "development-tools"]
include = ["src/", "LICENSE", "README.md"]

[dependencies]
rand = "0.8.5"
log = "0.4"
boost-rs-macros = { path = "../boost-rs-macros" }

[features]

default = []

full = [
    "logger",
    "rand"
]

logger = []
rand = []
