[package]
name = "boost-rs"
version = "0.0.3"
authors = ["JasonkayZK <jasonkayzk@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/JasonkayZK/boost-rs"
homepage = "https://github.com/JasonkayZK/boost-rs"
description = """
A library for boosting your develop productivity on Rust.
"""
keywords = ["utilities", "toolkit", "random", "macros"]
categories = ["algorithms", "accessibility", "development-tools"]
include = ["src/", "LICENSE", "README.md"]

[dependencies]
rand = "0.8.5"
log = { version = "0.4", optional = true }
boost-rs-macros = { version = "0.0.1", path = "../boost-rs-macros" }

[features]

default = []

full = [
    "logger",
    "rand",
    "collection",
]

logger = [
    "log"
]
rand = []
collection = []
