[package]
name = "boost-rs"
version = "0.0.9"
authors = ["JasonkayZK <jasonkayzk@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/JasonkayZK/boost-rs"
homepage = "https://github.com/JasonkayZK/boost-rs"
description = """
A library for boosting your develop productivity on Rust.
"""
keywords = ["utilities", "toolkit", "random", "macros"]
categories = ["algorithms", "accessibility", "development-tools"]
include = ["src/", "LICENSE", "README.md"]

[dependencies]
rand = "0.8.5"
log = { version = "0.4", optional = true }
thiserror = { version = "1.0.37", optional = true }
boost-rs-macros = { version = "0.0.2" }
bitvec = { version = "1.0.1", optional = true }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "skiplist"
harness = false
path = "./benches/skiplist/main.rs"

[features]

default = []

full = [
    "logger",
    "rand",
    "collection",
    "sort",
    "env",
    "types",
]

logger = [
    "log"
]
rand = []
collection = [
    "thiserror",
    "rand/small_rng",
    "bitvec",
]
sort = []
env = []
types = []
