[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead, and delete the **path**.
[dev-dependencies]
boost-rs = { version = "0.0.1", path = "../boost-rs" }
boost-rs-macros = { version = "0.0.1", path = "../boost-rs-macros" }

[[example]]
name = "macros-demo"
path = "macros.rs"
