[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead, and delete the **path**.
[dev-dependencies]
boost-rs = { path = "../boost-rs", features = ["collection"] }
boost-rs-macros = { path = "../boost-rs-macros" }
rand = "0.8.5"

[[example]]
name = "macros-elapsed-demo"
path = "macros/elapsed.rs"

[[example]]
name = "collection-demo"
path = "collections.rs"

[[example]]
name = "skiplist-demo"
path = "skiplist.rs"

[[example]]
name = "lrucache-demo"
path = "lrucache.rs"
